Wirtschafts_Simulationen/10_b/v5/ANZEIGE_TERMINAL.md
# Bunte Terminal-Anzeige

Diese Version zeigt die Verträge und Wahrheitsdimensionen **farbig und stylisch** im Terminal an.

## Start

```bash
pypy3 planetary_effect_economy.py   --steps 120   --scenario planetary_commons   --out out_planetenwirtschaft   --show-trades 40   --show-trade-detail   --show-dimensions   --show-catalog   --show-stack-explanation
```

Ohne PyPy3:

```bash
python3 planetary_effect_economy.py   --steps 120   --scenario planetary_commons   --out out_planetenwirtschaft   --show-trades 40   --show-trade-detail   --show-dimensions   --show-catalog   --show-stack-explanation
```

## Farben

Jede Dimension hat jetzt eine eigene Farbe, ein Symbol und sichtbare Balken:

- Kausalität
- Zeit
- Intensität
- Existenz
- Potenzen
- Wirkungen
- Substanz
- Materie
- Differenz
- Bestimmung
- Phänomene
- Winkelrichtung

## Optional

Farben abschalten:

```bash
python3 planetary_effect_economy.py --no-color
```
